Fix color contrast issues

--- a/assets/main.css
+++ b/assets/main.css
@@ -279,9 +279,9 @@ a.button-less-important:hover, a.button-less-important:focus {
 }
 
 span.number-circle {
-  color: #999;
+  color: #6E6E6E;
   border-radius: 50%;
-  border: 2px solid #999;
+  border: 2px solid #6E6E6E;
   width: 30px;
   height: 30px;
   text-align: center;
